fix: increase columns gap in sessions

--- a/website-styles/src/sass/templates/_single-session.scss
+++ b/website-styles/src/sass/templates/_single-session.scss
@@ -1,4 +1,8 @@
 .single-wcb_session {
+  .wp-block-columns {
+	gap: 5rem;
+  }
+
   .wp-block-wordcamp-session-speakers {
 	&__byline {
 	  display: none;
